fix failing to display header name if it's too long

--- a/packages/legend-extension-dsl-data-space/style/_data-space-query-plugin.scss
+++ b/packages/legend-extension-dsl-data-space/style/_data-space-query-plugin.scss
@@ -344,6 +344,5 @@
     border-radius: 0.2rem 0 0 0.2rem;
     font-size: 1.2rem;
     user-select: none;
-    margin-right: 5%;
   }
 }
