--- a/packages/legend-query-builder/style/_query-builder.scss
+++ b/packages/legend-query-builder/style/_query-builder.scss
@@ -64,6 +64,7 @@
     padding: 0 0.2rem;
     background: var(--color-dark-grey-200);
     border-radius: 0.2rem;
+    max-width: 60%;
   }
 
   &__header__status {
